2009-12-19  Piotr Fusik  <fox@scene.pl>
* win32/gui.c, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  replaced appendInt() with sprintf()

* asap.c, anylang.h: refactored ASAP_ParseDuration;
  strict validation of TIME tags

* win32/gui.c: validate fields in File Information window


2009-12-18  Piotr Fusik  <fox@scene.pl>
* acpu.c: fixed typo in a comment

* flash/ASAP.ppas: "covox" turned into "const"

* flash/ASAP.ppas, asap_internal.h:
  moved ASAP_SampleFormat definition to asap_internal.h

* win32/Makefile: grep version from chksap.pl


2009-12-17  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, asap_internal.h, csharp/ASAP.ppcs, flash/ASAP.ppas,
  java/ASAP.ppjava, javascript/asap.ppjs, javascript/asapweb.ppjs:
  unified duration parsing across programming languages


2009-12-14  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, csharp/ASAP.ppcs:
  C# version depended on localization settings


** 2.0.0 released on 2009-12-10

2009-12-10  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: reverted binary distributions from *-windows.* to *-win32.*

* flash/USAGE, README, win32/Makefile: Flash release

* java/USAGE: XHTML syntax

* INSTALL: fixed formatting

* CREDITS: added Adrian Matoga


2009-12-03  Piotr Fusik  <fox@scene.pl>
* PORTS.xml, PORTS.xsl, README, Makefile, win32/Makefile:
  added summary of differences between ports in a table

* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: XBMC doesn't support file
  associations (actually opening files from command line)


2009-12-02  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/Website.url, win32/Makefile:
  use <File> instead of <IniFile> for the website link (0.5 kB smaller MSI)


2009-12-01  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: added "Uninstall shortcut"

* win32/setup/asap-dialog.jpg, win32/setup/asap-banner.jpg:
  optimized using "jhead -purejpg"


2009-11-30  Piotr Fusik  <fox@scene.pl>
* CREDITS, win32/setup/asap.wxs, win32/setup/asap-dialog.jpg,